--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
     padding: 0px;
 }
 
+section .container-fluid .embed-responsive {
+    background-color: #4A235A;
+}
+
 figcaption {
     color: black;
 }
