--- a/site/styles.css
+++ b/site/styles.css
@@ -53,3 +53,7 @@ div .card {
     font-family: 'Lato', sans-serif;
     font-size: 18px;
 }
+
+#meme {
+    background-image: url("memeyell.png")
+}
