--- a/site/styles.css
+++ b/site/styles.css
@@ -39,7 +39,7 @@ div .card {
 
 #details {
     color: #FFFDE6;
-    background-color: #110017;
+    background-color: rgb(45, 37, 49);
     font-family: 'Lato', sans-serif;
     font-size: 18px;
 }
@@ -49,7 +49,7 @@ div .card {
 }
 
 #aboutme {
-    background-color: #FFC900;
+    background-color: rgb(255, 211, 16);
     font-family: 'Lato', sans-serif;
     font-size: 18px;
 }
